--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 jinja2
 weasyprint
 backtrader>=1.9.70.122
-pandas_datareader==0.7.0
+pandas_datareader>=0.9.0
 scipy==1.5.0
 riskparityportfolio
 pybloqs
